--- a/03_Ch_4_Orthogonality/057-robot_configuration.ipynb
+++ b/03_Ch_4_Orthogonality/057-robot_configuration.ipynb
@@ -28,6 +28,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f88af603-de1a-4466-bffd-e329b3057d59",
+   "metadata": {},
+   "source": [
+    "## Learning Objectives\n",
+    "\n",
+    "By the end of this page, you should know:\n",
+    "- how to express the position and orientation of an object with respect to a reference frame\n",
+    "- how to change reference frames of an object using linear transformations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f513f00d-ffe2-4f05-a80c-fca8975b9ae3",
    "metadata": {},
    "source": [
