--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/079-Longitudinal_Dynamics.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/079-Longitudinal_Dynamics.ipynb
@@ -34,6 +34,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "88ed31e6-c7ee-412b-9113-eed5ba0e0ec0",
+   "metadata": {},
+   "source": [
+    "## Learning Objectives\n",
+    "\n",
+    "By the end of this page, you should know:\n",
+    "- how to check the eigenvalues for controller in feedback with a dynamical systems\n",
+    "- undertand the practical implications of positive and negative eigenvalues in the matrix describing a linear ordinary differential equation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "89561d6f-8a8c-4bae-a05b-87d7fc88dc4e",
    "metadata": {},
    "source": [
