--- a/09_Ch_10_SVD_Apps/114-recommender_systems.ipynb
+++ b/09_Ch_10_SVD_Apps/114-recommender_systems.ipynb
@@ -28,6 +28,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7ec41545-6544-46c0-b962-3e45a227dce8",
+   "metadata": {},
+   "source": [
+    "## Learning Objectives\n",
+    "\n",
+    "By the end of this page, you should know:\n",
+    "- the definition of a recommender system based off of collaborative filtering\n",
+    "- how to express collaborative filtering as a matrix completion problem\n",
+    "- one approach to solve the matrix completion via the singular value decompositon"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a7845f11-9712-405c-9209-9257643b1ce6",
    "metadata": {},
    "source": [
