--- a/10_Ch_11_PCA_Apps/123-eigenfaces.ipynb
+++ b/10_Ch_11_PCA_Apps/123-eigenfaces.ipynb
@@ -28,6 +28,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "980dfbcb-8a63-42e1-865c-f33a724d1e1b",
+   "metadata": {},
+   "source": [
+    "## Learning Objectives\n",
+    "\n",
+    "By the end of this page, you should know:\n",
+    "- how to decompose a dataset of images into the sum of principle components\n",
+    "- how to compress a new image using the principle components of the dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c309a569-7ce4-4722-9494-11e660223e6d",
    "metadata": {},
    "source": [
