--- a/03_Ch_4_Orthogonality/057-robot_configuration.ipynb
+++ b/03_Ch_4_Orthogonality/057-robot_configuration.ipynb
@@ -31,6 +31,8 @@
    "id": "f88af603-de1a-4466-bffd-e329b3057d59",
    "metadata": {},
    "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Ch_4_Orthogonality/057-robot_configuration.ipynb)\n",
+    "\n",
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
@@ -43,6 +45,7 @@
    "id": "f513f00d-ffe2-4f05-a80c-fca8975b9ae3",
    "metadata": {},
    "source": [
+    "## Reference Frames\n",
     "When we consider the motion of an object in the world, we need to keep track of the object's position and its orientation. To keep track of these, it is necessary to define a *frame of reference* which we can express the position and orientation with respect to. In the below figure, if we consider the quadrotor as the object, the fixed world frame (sometimes called inertial frame) is our frame of reference.\n",
     "```{image} frame_of_ref.png\n",
     "```\n",
@@ -58,6 +61,7 @@
    "id": "3a7cefb8-f4db-40ee-9dee-4eeba1a9dd8c",
    "metadata": {},
    "source": [
+    "## Camera, World, and Ground Vehicle Reference Frames\n",
     "Let's first express the camera relative to the world frame. To do so, we will need to consider the position of the camera relative to the world frame, and the direction which it is pointing. The position can be represented as a translation consisting of three components. Because we will later have multiple reference frames, it is important to denote that this translation is with respect to the world frame. We will use $W$ to denote the world frame, and $C$ to denote the camera frame. This translation will thus be expressed as \n",
     "$$ ^W \\vv t_C \\in \\R^3.$$\n",
     "To express the orientation of the camera, we will assign three axes to the camera frame. The $x$-axis of the camera frame is the direction that the camera will point. The $y$ axis will be the horizontal view from the camera, and the $z$ axis will be the vertical view from the camera, as below \n",
@@ -170,6 +174,7 @@
    "id": "8fad5501-d5d7-4a00-80ff-29a45b495334",
    "metadata": {},
    "source": [
+    "## Camera Trajectory\n",
     "Examining the result, we see that we have plotted the world frame in the lower left which is aligned with the coordinates of the plot, and the camera frame which is rotated $90^\\circ$ about the $z$-axis from the world frame, shifted along the $x$ axis by $4$, and shifted upwards by $2$. Below, we will develop a path of camera frames representing the camera position and orientation as the drone flies over time. We will suppose that the drone flies in a circle of radius four centered at the origin of the world frame, and starting from an initial position $\\bm 4 \\\\ 0 \\\\ 2\\em$. The height will remain constant throughout the flight. During flight, the drone will rotate so that the camera is always pointing towards the $z$ axis of the world frame, and angled down by $22.5^\\circ$. The circle will take place over a span of $500$ timesteps of duration $0.02$. We will then animate the trajectory of the camera frame. "
    ]
   },
@@ -252,6 +257,7 @@
    "id": "71455287-b354-42df-8038-a4dcf9976bf0",
    "metadata": {},
    "source": [
+    "## Ground Vehicle Trajectory\n",
     "Let us now define the translation and rotation of our ground vehicle. As with the camera, the orientation of the ground vehicle will be described using a translation and a rotation. To denote that it is the ground vehicle, we will use the subscipt $G$. In particular, we will have a translation relative to the world frame\n",
     "$\n",
     "^W \\vv t_G \n",
@@ -391,6 +397,7 @@
    "id": "bcbd716b-9e1b-485d-bf70-875285a7cf23",
    "metadata": {},
    "source": [
+    "## Changing Reference Frames\n",
     "Now that we have the paths of both the camera and the ground vehicle expressed in terms of the world frame, we come to our final step: expressing the ground vehicle in the camera frame. We start from the fact that we have the camera frame relative to the world frame, described by $^W \\vv t_C$ and $^W R_C$ and the ground vehicle frame relative to the camera frame described by $^W \\vv t_G$ and $^W R_G$. From these translations and rotations, we want to find the translations and rotations of the ground vehicle with respect to the the camera frame, $^C \\vv t_G$ and $^C R_G$. Our first step in doing so will be to express the world frame in the coordinates of the camera frame. In particular, we want to use $^W \\vv t_C$ and $^W R_C$ to construct $^C \\vv t_W$ and $^C R_W$. One way to do so is to view the coordinate frames as a matrix that transforms points of one frame into points of another frame. In particular, if $^C \\vv p \\in \\R^3$ is a vector described in camera frame coordinates, we can express that point in world frame coordinates as $^W \\vv p$ via the transformation $^W \\vv p = ^W R_C$ $^C \\vv p +$  $ ^W \\vv t_C$. This may be expressed as a single matrix multiplication by using *homogenous coordinates*. In particular, if we stick a $1$ at the bottom of the vectors $^C \\vv p$ and $^W \\vv p$, we have that \n",
     "\\begin{equation}\n",
     "    \\bm ^W \\vv p \\\\ 1\\em = \\bm ^W R_C & ^W \\vv t_C \\\\ 0 & 1 \\em  \\bm {^C \\vv p} \\\\ 1 \\em.\n",
