--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/079-Longitudinal_Dynamics.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/079-Longitudinal_Dynamics.ipynb
@@ -37,6 +37,8 @@
    "id": "88ed31e6-c7ee-412b-9113-eed5ba0e0ec0",
    "metadata": {},
    "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/05_Ch_6_Eigenvalues_and_Eigenvectors/079-Longitudinal_Dynamics.ipynb)\n",
+    "\n",
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
@@ -49,6 +51,7 @@
    "id": "89561d6f-8a8c-4bae-a05b-87d7fc88dc4e",
    "metadata": {},
    "source": [
+    "## Aircraft Longitudinal Dynamics\n",
     "A passenger aircraft spends most of the flight near a constant speed and altitude. However, during the coarse of the flight, wind knocks the aircraft away from its desired operating condition. To return to the desired operating condition, the aircraft can adjust its *thrust*, which is a force in the direction that the airplane is pointing. The aircraft also has two flaps on the tail called *elevators* which can be adjusted to control the pitch of the plane, illustrated below. \n",
     "```{image} Aileron_pitch.gif\n",
     ":alt: He divided by zero\n",
@@ -119,6 +122,7 @@
    "id": "1836c134-630d-4b9c-a33b-df1c526bfcc5",
    "metadata": {},
    "source": [
+    "## Feedback Control\n",
     "In order to steer the plane back to its desired operating condition, the values for the control variables $\\delta_e$ and $\\delta_t$ should be chosen according to the current deviation of the state variables of the aircraft from their desired values. This is known as *feedback control*, because we are feeding our current measurements of the deviation variables $u$, $v$, $\\theta$, $q$, and $h$ into the control system which influences the value of these measurements in the future. We will select the control variables according to a linear function of the error variables as \n",
     "$$ \\begin{bmatrix} \\delta_e \\\\ \\delta_t \\end{bmatrix} = K \\begin{bmatrix}  u- u_{\\mathsf{des}} \\\\ v - v_{\\mathsf{des}} \\\\ \\theta - \\theta_{\\mathsf{des}} \\\\ q - q_{\\mathsf{des}} \\\\  h - h_{\\mathsf{des}} \\end{bmatrix}, $$\n",
     "where $K$ is called our *feedback gain*. \n",
@@ -263,6 +267,8 @@
     "* $\\lambda_4 = -.07$\n",
     "* $\\lambda_5 = -.61$\n",
     "\n",
+    "\n",
+    "## Stable Feedback Control\n",
     "The response of the system at time $t$ is given by $\\sum_{i=1}^5 c_i e^{\\lambda_i t} \\mathbf v_i$, where $\\mathbf{c} = V^{-1} \\mathbf x_0$. Three of the eigenvalues are negative, and thus their contribution to the sum diminishes as $t$ increases. However, $\\lambda_2 > 0$ and $\\lambda_3 >0$. Therefore, the coefficients $c_2 e^{\\lambda_2 t}$ and $c_3 e^{\\lambda_3 t}$ increases as $t$ increases. As a result, the small initial deviation from the desired operating point gets amplified, and causes the plane to crash. Let's try another control design:\n",
     "\n",
     "$$ K = \\begin{bmatrix} -.75 & 1.4 & -17 & .75 & -.2 \\\\ -1.5 & 3 & -40 & -5 & -.4 \\end{bmatrix}$$"
@@ -386,6 +392,7 @@
    "id": "12b663ee-1e58-41f6-bfaa-0c80678ef7e3",
    "metadata": {},
    "source": [
+    "## Linear ODEs with imaginary Eigenvalues \n",
     "Our altitude eventually appraoches the desired altitude. But it takes almost two minutes. Let's try one more gain and see if we get a quicker response. \n",
     "$$ K = \\begin{bmatrix} -0.5 & -1 & 17 & 3 & 0.7 \\\\ -0.8 & 1.4 & -15 &  -1.6 & -0.7\\end{bmatrix}$$"
    ]
@@ -434,7 +441,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4_/_wdy2jwx40q500zgz9zr76dh0000gn/T/ipykernel_19956/1406417748.py:6: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "/var/folders/4_/_wdy2jwx40q500zgz9zr76dh0000gn/T/ipykernel_10339/1406417748.py:6: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  response[i] = V@np.diag(np.exp(t*D))@np.linalg.inv(V)@x_0\n"
      ]
     },
