--- a/09_Ch_10_SVD_Apps/114-recommender_systems.ipynb
+++ b/09_Ch_10_SVD_Apps/114-recommender_systems.ipynb
@@ -31,6 +31,9 @@
    "id": "7ec41545-6544-46c0-b962-3e45a227dce8",
    "metadata": {},
    "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/09_Ch_10_SVD_Apps/114-recommender_systems.ipynb)\n",
+    "\n",
+    "\n",
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
@@ -44,6 +47,7 @@
    "id": "a7845f11-9712-405c-9209-9257643b1ce6",
    "metadata": {},
    "source": [
+    "## Types of Recommender System\n",
     "Recommender systems have become a vital part of our digital lives, guiding us towards products, services, and content we might like. Generally speaking, recommender systems are algorithms designed to suggest relevant items to users. These systems are used in various domains such as e-commerce, streaming services, and social media. They enhance user experience by filtering vast amounts of information to deliver personalized content. There are two main categories of recommender systms:\n",
     "\n",
     "* **Content-Based Filtering**: Content-based filtering recommends items to users by analyzing the features of items they have previously liked, matching similar items based on those attributes.\n",
@@ -60,6 +64,7 @@
    "id": "53a74408-8118-4ca8-9ff7-5b46d61004b4",
    "metadata": {},
    "source": [
+    "## Movie Recommendations\n",
     "The tools that we have learned in this class are used in the design of both types of recommender system. In this case study, we will focus on collaborative filtering, where the singular value decomposition plays a critical roll. To start off with, let's download a dataset consisting of movie ratings from various users."
    ]
   },
