--- a/01_Ch_2_Vector_Spaces_and_Bases/038-mobile-robot.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/038-mobile-robot.ipynb
@@ -31,6 +31,8 @@
    "id": "8b2e4d91-ff24-4bfc-9ee0-4ad7e42f3697",
    "metadata": {},
    "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Ch_2_Vector_Spaces_and_Bases/038-mobile-robot.ipynb)\n",
+    "\n",
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
@@ -43,6 +45,7 @@
    "id": "734735d3-4a26-4e97-a94a-cc9eb59e6be1",
    "metadata": {},
    "source": [
+    "## Mobile Robot Description\n",
     "Our goal will be to steer a mobile robot to a desired position. Examples of mobile robots are shown below. On the left is a mobile robot research platform used by GRASP lab, while on the right is a roomba vaccuum cleaner. \n",
     "```{image} mobilerobot.png\n",
     ":alt: He divided by zero\n",
@@ -155,6 +158,8 @@
    "id": "0c9388b1-91f3-4c49-8093-e8b369cbfb8a",
    "metadata": {},
    "source": [
+    "## Steering the robot\n",
+    "\n",
     "It seems that the robot is spiraling out aimlessly from it's initial position. Let's try to add some direction to the robot. We will try to steer the robot from its initial position to the origin in two seconds. In particular, we will set $N = 20 = 2/(\\delta t)$. Our goal is to steer the robot to the final position\n",
     "$$ \\mathbf{p}_N = \\begin{bmatrix} 0 \\\\ 0 \\end{bmatrix}$$ from the initial position $$\\mathbf{p}_0 = \\begin{bmatrix} 1 \\\\ 1\\end{bmatrix}.$$ Then we are seeking a solution to the equation $$\\mathbf p_N =  A^N \\mathbf{p}_0 + A^{N-1} B \\mathbf{u}_0 + A^{N-2} B \\mathbf{u}_1 + \\cdots + AB \\mathbf{u}_{N-2} + B \\mathbf{u}_{N-1},$$ where the unknowns are $(\\mathbf u_0, \\mathbf{u}_1, \\dots, \\mathbf{u}_{N-1})$. This can be rearranged as \n",
     "\\begin{eqnarray} \\label{eq:linsys}\\mathbf p_N  - A^N \\mathbf{p}_0 = \\begin{bmatrix} A^{N-1} B & A^{N-2} B & \\dots & A B & B \\end{bmatrix} \\begin{bmatrix} \\mathbf u_0 \\\\ \\mathbf u_1 \\\\ \\vdots \\\\ \\mathbf u_{N-1}\\end{bmatrix}.\\end{eqnarray}\n",
@@ -257,6 +262,7 @@
    "id": "43284728-ab97-47b7-bbab-2235d52d373c",
    "metadata": {},
    "source": [
+    "## Alternative solutions \n",
     "That's a big jump! We're supply no commands most of the time, and then applying a large input at the last possible opportunity. \n",
     "`````{exercise}\n",
     ":label:underdetermined\n",
@@ -359,6 +365,7 @@
    "id": "c8899834-997b-4924-a253-a78cf698be93",
    "metadata": {},
    "source": [
+    "## Adding Waypoints\n",
     "Well... we still get to the destination, but we've now taken a weird path because of our null space element was chosen randomly. To take a more reasonable path, we could instead try to add more desired midway points to pass through. Such points are called waypoints. Let's select a sequence of 4 waypoints, evenly spaced over the 2 seconds. As we have $N=20$ total timesteps, this means that we have a desired location for $\\mathbf{p}_5,   \\mathbf{p}_{10}, \\mathbf{p}_{15}$ and $\\mathbf{p}_{20}$. We will set these waypoints as follows:\n",
     "* $\\mathbf{p}_{5} = \\begin{bmatrix} .75 \\\\ .75 \\end{bmatrix}$\n",
     "* $\\mathbf{p}_{10} = \\begin{bmatrix} .5 \\\\ .5 \\end{bmatrix}$\n",
@@ -482,6 +489,7 @@
    "id": "d2b511bf-3164-4c45-beea-41439cc28654",
    "metadata": {},
    "source": [
+    "## Minimum Energy Control\n",
     "A key question remaining is how we should choose $\\mathbf{n}$. Setting it to zero leads to somewhat strange input sequences, where we only supply inputs at the time before we need to satisfy a waypoint constraint. Conversely, choosing it randomly leads to very strange behavior. To get more reasonable trajectories, we can consider trying to design the sequence of inputs that minimizes the enegy expenditure of the robot. The energy used by a robot that takes the sequence of actions $\\mathbf{u}_0, \\mathbf{u}_1, \\dots, \\mathbf{u}_{N-1}$ is given by the sum of squared elements in the input sequence. In particular, \n",
     "$$\\mathbf{Energy}(\\mathbf{u}_0, \\mathbf{u}_1, \\dots, \\mathbf{u}_{N-1}) = \\sum_{i=0}^{N-1} \\mathbf{u}_{i, 1}^2 + \\mathbf{u}_{i, 2}^2,$$ where $\\mathbf{u}_{i, 1}$ and $\\mathbf{u}_{i, 2}$ are the first and second commands of the input $\\mathbf{u}_{i}$, respectively. \n",
     "\n",
