--- a/08_Ch_9_Symmetric_Matrices/103-opt_princ.ipynb
+++ b/08_Ch_9_Symmetric_Matrices/103-opt_princ.ipynb
@@ -151,18 +151,9 @@
     "\n",
     "The key constraint is $x^T\\vv u_1=0$, which says we can only look for vectors that are orthogonal to $\\vv u_1$, the eigenvector associated with $\\lambda_1$.\n",
     "\n",
-    ":::{prf:example}\n",
+    ":::{prf:example} Finding the second largest eigenvalue of a symmetric matrix\n",
     "Find the maximum value of $q(x_1,x_2,x_3) = 9x_1^2 + 4x_2^2 + 3x_3^2$ subject to the constraint that $\\|\\vv x\\|=1$ and $\\vv x^T\\vv u_1=0$, for $\\vv u_1=\\bm 1 \\\\ 0 \\\\ 0 \\em$ the eigenvector corresponding to the greatest  eigenvalue $\\lambda_1=9$ of $K=\\text{diag}(9,4,3)$. The constraint $\\vv x^T\\vv v_1=0$ means $ x_1=0$, and so we need to find $(x_2,x_3)$ satisfying $x_2^2+x_3^2=1$ that maximizes $4x_2^2+3x_3^2$. This happens at $(x_2,x_3)=(1,0)$, leading to a value of 4, which is the second largest eigenvalue $\\lambda_2$ of $K$. The corresponding eigenvector is $\\vv u_2=(0,1,0)$.\n",
-    ":::\n",
-    "\n",
-    "**TO DO**: please add a less trivial example and then end with Thm 8.42 from ALA which has the general variational characterization of $\\lambda_i$.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/08_Ch_9_Symmetric_Matrices/103-opt_princ.ipynb)"
+    ":::\n"
    ]
   },
   {
@@ -177,7 +168,84 @@
     "$$\n",
     "\\lambda_j = \\max \\{ \\vv x^\\top A\\vv x \\mid \\|\\vv x\\| = 1, \\quad \\langle \\vv x, \\vv{v_1} \\rangle = \\dots = \\langle \\vv{x}, \\vv{v_2} \\rangle = 0 \\}.\n",
     "$$\n",
-    ":::\n"
+    ":::\n",
+    "\n",
+    "Let's see this theorem at work with an example.\n",
+    "\n",
+    ":::{prf:example} Finding the eigenvalues of a symmetric matrix (Exercise 8.5.37d of ALA)\n",
+    "\n",
+    "Given the quadratic form $q(x_1, x_2, x_3) = \\bm x_1\\\\x_2\\\\x_3\\em \\bm 6&-4&1\\\\-4&6&-1\\\\1&-1&11 \\em \\bm x_1\\\\x_2\\\\x_3\\em$, let's find its eigenvalues using the optimization-based approach discussed above. If anything, this is more of an exercise in algebra to show how we might find eigenvalues of a symmetric matrix without solving the characteristic equation!\n",
+    "\n",
+    " Let's begin by finding the largest eigenvalue $\\lambda_1$, which is the maximum value of $q(\\vv x)$ over all vectors $\\vv x$ with unit norm:\n",
+    "\n",
+    " $$\n",
+    " \\lambda_1 = \\max \\{ q(\\vv x) \\mid \\|\\vv x \\|^2 = 1 \\}\n",
+    " $$\n",
+    " \n",
+    "For readibility, this can be written as the program:\n",
+    "\n",
+    "$$\n",
+    "&\\text{Maximize $q(\\vv x)$}\\\\\n",
+    "&\\text{Subject to $\\| \\vv x\\|^2 = 1$}\n",
+    "$$\n",
+    "\n",
+    " Expanding the quadratic form, and rewriting:\n",
+    "\n",
+    " $$ \\label{expr:QuadraticForm}\n",
+    "q(x_1, x_2, x_3) &= 6x_1^2 + 6x_2^2 + 11x_3^2 - 8x_1x_2 - 2x_2x_3 + 2x_3x_1\\\\\n",
+    "&= 6x_1^2 + 6(-x_2)^2 + 11x_3^2 + 8x_1(-x_2) + 2(-x_2)x_3 + 2x_3x_1\n",
+    "$$\n",
+    "\n",
+    "Let's try to reason about this expression, and the reason why we have factored out $(-x_2)$ will become apparent. Try to prove the following claims in order:\n",
+    "\n",
+    "* **Claim 1.** If $\\vv x = (x_1, x_2, x_3)$ is a unit vector maximizing $q(\\vv x)$, the terms $x_1$, $-x_2$, and $x_3$ are either all nonnegative or all nonpositive.\n",
+    "\n",
+    "* **Claim 2.** There is a unit vector $\\vv{x^*} = (x^*_1, x^*_2, x^*_3)$ for which $q(\\vv x)$ is maximized AND $x_3^* \\geq 0$.\n",
+    "\n",
+    "* **Claim 3.** There is a unit vector $\\vv{x^{**}} = (x^{**}_1, x^{**}_2, x^{**}_3)$ for which $q(\\vv x)$ is maximized AND $x^{**}_3 \\geq 0$ AND $x^{**}_1 = x^{**}_2$.\n",
+    "\n",
+    "And after proving these three smaller claims, conclude that $(\\frac {1}{ \\sqrt 6}, -\\frac{1}{\\sqrt 6}, \\frac{2}{\\sqrt 6})$ is a unit vector maximizing $q$ with $q(\\frac {1}{ \\sqrt 6}, -\\frac{1}{\\sqrt 6}, \\frac{2}{\\sqrt 6}) = 12$, implying that the largest eigenvalue of the coefficient matrix is $\\lambda_1 = 12$. Hence the largest eigenvalue/vector pair is $\\lambda_1 = 12$ and $\\vv{v_1} = (1, -1, 2)$.\n",
+    "\n",
+    "Now, let's find the middle eigenvalue of $A$, which is the maximum value of $q(\\vv x)$ over all unit vectors $\\vv x$ which are orthogonal to $\\vv{v_1} = (1, -1, 2)$:\n",
+    "\n",
+    "$$\n",
+    "\\lambda_2 = \\max \\{ q(\\vv x) \\mid \\|\\vv x\\|^2 = 1, \\langle(1, -1, 2), \\vv x\\rangle = 0 \\}\n",
+    "$$\n",
+    "\n",
+    "This can be written as the program:\n",
+    "\n",
+    "$$\\label{expr:SecondProgram}\n",
+    "&\\text{Maximize $q(\\vv x) = 6x_1^2 + 6x_2^2 + 11x_3^2 - 8x_1x_2 - 2x_2x_3 + 2x_3x_1$}\\\\\n",
+    "&\\text{Subject to $\\| \\vv x\\|^2 = 1$ and $x_1 - x_2 + 2x_3 = 0$}\n",
+    "$$\n",
+    "\n",
+    "We can rewrite the constraint $\\langle (1, -1, 2), \\vv x\\rangle = 0$ as $x_3 = \\frac{x_2 - x_1}{2}$. We can use this to rewrite [](expr:SecondProgram) as the program:\n",
+    "\n",
+    "$$\\label{expr:RewrittenSecondProgram}\n",
+    "&\\text{Maximize $\\frac{31}{4}x_1^2 + \\frac{31}{4}x_2^2 - \\frac{23}{2}x_1x_2$}\\\\\n",
+    "&\\text{Subject to $\\| \\vv x\\|^2 = \\frac{5}{4}x_1^2 + \\frac{5}{4}x_2^2 - \\frac{x_1x_2}{2} = 1$}\n",
+    "$$\n",
+    "\n",
+    "This is maximized, for example, when $x_1 = \\frac{1}{2\\sqrt 3}$ and $x_2 = -\\frac{1}{2\\sqrt 3}$ (for which the objective value is $9$); this corresponds to a value of $x_3 = \\frac{x_2 - x_1}{2} = -\\frac{1}{2\\sqrt 3}$. Hence we conclude that the second largest eigenvalue/vector pair is $\\lambda_2 = 9$ and $\\vv{v_2} = (-1, 1, 1)$.\n",
+    "\n",
+    "You can iterate this process to find the third largest (and smallest) eigenvalue $\\lambda_3$:\n",
+    "\n",
+    "$$\n",
+    "\\lambda_3 = \\max\\{ q(\\vv x) \\mid \\|\\vv x\\|^2 = 1, \\langle (1, -1, 2), \\vv x\\rangle = \\langle (-1, 1, 1), \\vv x\\rangle = 0 \\}\n",
+    "$$\n",
+    "\n",
+    "This is a bit of algebra, so we won't do it here, but it's pretty straightforward! You should get that the third largest eigenvalue/vector pair is $\\lambda_3 = 2$ and $\\vv{v_3} = (1, 1, 0)$.\n",
+    "\n",
+    "\n",
+    "\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/08_Ch_9_Symmetric_Matrices/103-opt_princ.ipynb)"
    ]
   }
  ],
