added compact svd exercise

--- a/09_Ch_10_SVD_Apps/111-SVD.ipynb
+++ b/09_Ch_10_SVD_Apps/111-SVD.ipynb
@@ -424,7 +424,44 @@
     "You can check that indeed $A = U\\Sigma V^T$ here, and that $U^TU = V^TV = I_2$\n",
     ":::\n",
     "\n",
-    "**TO DO**: Please add example 4 from LAA 7.1, subtly modified to use the compact SVD form."
+    "**TO DO**: Please add example 4 from LAA 7.1, subtly modified to use the compact SVD form.\n",
+    "\n",
+    ":::{prf:example} Finding the SVD of a matrix with a zero singular value (Example 4 of LAA 7.1)\n",
+    ":label: svd-ex2\n",
+    "\n",
+    "Let's find the singular values of the matrix $A = \\bm 1&-1\\\\-2&2\\\\2&-2\\em$. We start by computing the eigenvalues and (unit) eigenvectors of $A^\\top A = \\bm 9&-9\\\\-9&9\\em$, which we find to be\n",
+    "\n",
+    "$$\n",
+    "\\lambda_1 = 18, \\quad \\vv{v_1} = \\bm \\frac{1}{\\sqrt 2} \\\\ -\\frac{1}{\\sqrt 2} \\em\\\\\n",
+    "\\lambda_2 = 0, \\quad\\vv{v_2} = \\bm \\frac{1}{\\sqrt 2} \\\\ \\frac{1}{\\sqrt 2}\\em\n",
+    "$$\n",
+    "\n",
+    "Hence the only singular value of $A$, which are given by the square roots of the nonzero eigenvalues of $A^\\top A$, is $\\sigma_1 = \\sqrt{\\lambda_1} = \\sqrt{18}$, with a corresponding right singular vector of $\\vv{v_1}$. \n",
+    "\n",
+    "Hence the $V$ matrix is given by:\n",
+    "\n",
+    "$$\n",
+    "V = \\bm \\vv{v_1}\\em = \\bm \\frac{1}{\\sqrt 2} \\\\ -\\frac{1}{\\sqrt 2} \\em,\n",
+    "$$\n",
+    "\n",
+    "the $\\Sigma$ matrix is given by:\n",
+    "\n",
+    "$$\n",
+    "\\Sigma = \\bm \\sqrt{18} \\em,\n",
+    "$$\n",
+    "\n",
+    "and the $U$ matrix is given by:\n",
+    "\n",
+    "$$\n",
+    "U = \\bm \\frac{A\\vv{v_1}}{\\sigma_1}\\em = \\bm \\frac 1 3 \\\\ -\\frac 2 3 \\\\ \\frac 2 3 \\em\n",
+    "$$\n",
+    "\n",
+    "Hence the (compact) SVD of $A$ is given by:\n",
+    "\n",
+    "$$\n",
+    "A = U\\Sigma V^\\top = \\bm \\frac 1 3 \\\\ -\\frac 2 3 \\\\ \\frac 2 3 \\em \\bm\\sqrt {18}\\em \\bm \\frac{1}{\\sqrt 2} & -\\frac{1}{\\sqrt 2} \\em.\n",
+    "$$\n",
+    ":::"
    ]
   },
   {
